[package]
name = "wc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WaveConductor shared infrastructure: lifecycle, audio, input, settings, math."
publish = false

[lints]
workspace = true

[features]
default = []
# Enables HandTrackingState consumers (sketch gesture detection) and brings
# in the native LeapC FFI dependency. The waveconductor binary turns this on;
# tests can opt in selectively.
hand-tracking-gestures = ["dep:leaprs"]
# In-process MediaPipe webcam hand-tracking provider. Additive and independent
# of `hand-tracking-gestures` (which brings in leaprs). Uses ONNX Runtime (`ort`)
# with CoreML acceleration on macOS; `ort` downloads a prebuilt C++ ONNX Runtime
# binary at build time (`download-binaries`) under the CDLA-Permissive-2.0 license
# (already allowed in deny.toml). The base feature is the inference + two-stage
# glue (CI-testable headless against vendored models); the real webcam capture is
# the `-camera` sub-feature below so the base build never needs camera platform
# libraries.
hand-tracking-mediapipe = ["dep:ort", "dep:image"]
# Adds the production webcam `FrameSource` on top of the base feature. nokhwa
# drives Linux/Windows; macOS uses the in-house `AvfFrameSource` on the
# maintained `objc2` AVFoundation bindings (the `objc2-*`/`dispatch2` deps below
# are macOS-target-gated, so this list naming them is a no-op off macOS).
hand-tracking-mediapipe-camera = [
    "hand-tracking-mediapipe",
    "dep:nokhwa",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-av-foundation",
    "dep:objc2-core-video",
    "dep:objc2-core-media",
    "dep:dispatch2",
]
# Enables real OS temperature sensing for the screensaver's `ThermalState`
# signal. On Linux this is a ZERO-DEPENDENCY `std::fs` reader of the kernel
# `hwmon`/`thermal_zone` sysfs interface (see `lifecycle::thermal::platform::
# native`) — no crate, no MSRV pin, no build-time native dep, smallest possible
# supply-chain surface for an unattended multi-day appliance. On macOS this
# feature still compiles but currently falls through to the Cool/Schedule
# no-sensor model: the Apple-Silicon `macmon` backend lives behind the separate
# `thermal-sensor-macos` feature below and is NOT enabled by `thermal-sensor`.
# The platform layer `cfg`-gates the sysfs reader to Linux (non-macOS/non-wasm).
thermal-sensor = []
# Apple-Silicon SoC temperature sensing via `macmon`. Plain `thermal-sensor`
# compiles cleanly on macOS by never touching `macmon`; macOS dev builds opt in
# through this separate feature.
thermal-sensor-macos = ["dep:macmon"]
# Windows SoC temperature sensing via the WDDM D3DKMT adapter-perf-data query
# (`platform::windows::WddmThermalSensor`). No admin and no new crate beyond the
# `windows` bindings already transitively in the graph. Reliable no-admin CPU-die
# temps are not achievable on consumer Windows (every accurate source needs a
# ring-0 driver), so this reads the iGPU/SoC die temperature as a coarse throttle
# proxy and returns None (→ Cool/Schedule fallback) when a driver reports 0. Plain
# `thermal-sensor` compiles on Windows and falls through to None.
thermal-sensor-windows = ["dep:windows"]
# Image template library: content-addressed cache + manifest + thumbnails for
# the spawn-template picker. Native-only (uses `rfd`/`image`); mirrors the
# `hand-tracking-mediapipe` pattern of a feature that pulls optional native deps.
templates = ["dep:image", "dep:blake3"]

[dependencies]
bevy = { workspace = true }
bitflags = { workspace = true }
cpal = { workspace = true }
fundsp = { workspace = true }
rtrb = { workspace = true }
smallvec = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wc-core-macros.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
egui-phosphor = { workspace = true }
serde.workspace = true
toml.workspace = true
dirs.workspace = true
blake3 = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { workspace = true }
leaprs = { workspace = true, optional = true }
# MediaPipe webcam provider deps (optional; gated by `hand-tracking-mediapipe`
# / `-camera`). ort = ONNX Runtime inference (CoreML EP on macOS); image = frame
# decode/resize; nokhwa = webcam capture (camera sub-feature only). ort wraps
# the C++ ONNX Runtime, so it sits under the non-wasm target.
ort = { workspace = true, optional = true }
image = { workspace = true, optional = true }
# Linux temperature sensing (the `native::SysfsThermalSensor` reader) needs NO
# dependency — it reads the kernel `hwmon`/`thermal_zone` sysfs files with
# `std::fs`. We surveyed `sysinfo` (pulls ~30 crates for file reads we can do
# directly), `libmedium`, and `lm-sensors` (needs the libsensors C lib + bindgen
# at build time — deploy friction on a fresh NUC); for a coarse "hottest CPU °C
# every few seconds" on a known Linux box, zero deps is the most robust.
#

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
# nokhwa drives webcam capture on Linux and Windows. macOS uses the in-house
# AvfFrameSource (objc2 AVFoundation) instead; nokhwa is excluded from macOS to
# shed the stale `objc 0.2` / `core-video-sys` transitive chain.
nokhwa = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Apple-Silicon temperature sensing. Pinned because `macmon` wraps private Apple
# IOReport/IOKit APIs; construction/sampling errors are contained by
# `platform::macos::MacmonSensor`.
macmon = { version = "=0.7.0", optional = true }
# ort CoreML execution provider (GPU/Neural Engine inference). macOS-only feature
# so it never reaches Windows/Linux `--all-features` builds. Unions with the base
# `ort` dep declared under the non-wasm target table. See inference_ort.rs.
ort = { workspace = true, optional = true, features = ["coreml"] }
# macOS webcam capture via AVFoundation on the maintained `objc2` framework
# bindings (replaces nokhwa's unmaintained `objc 0.2`/`core-video-sys` backend on
# macOS). All optional + gated by `hand-tracking-mediapipe-camera`. The
# per-framework crates expose one cargo feature per Objective-C class/constant,
# so only the AVFoundation classes the capture backend touches are enabled.
objc2 = { version = "0.6", optional = true }
# `default-features = false` on every framework crate: the AVFoundation umbrella
# default pulls the entire framework (AVAudio/AVAsset/...), a large needless
# compile. Each `feature` below is one Objective-C class/constant module the
# backend actually references, verified against the 0.3.2 generated bindings.
objc2-foundation = { version = "0.3", optional = true, default-features = false, features = [
    "std",
    "NSString",
    "NSArray",
    "NSDictionary",
    "NSObject",
    "NSValue",          # NSNumber, for the BGRA videoSettings value
    "NSError",          # lockForConfiguration's Result error
    "objc2-core-foundation", # CFString -> NSString bridge for the pixel-format key
] }
objc2-av-foundation = { version = "0.3", optional = true, default-features = false, features = [
    "std",
    "objc2-core-media", # CMSampleBuffer/CMTime in the delegate + throttle setters
    "dispatch2",        # the sample-buffer callback DispatchQueue
    "AVCaptureSession", # also provides AVCaptureConnection
    "AVCaptureDevice",  # device, discovery session, format, frame-rate ranges
    "AVCaptureInput",
    "AVCaptureOutput",
    "AVCaptureOutputBase", # required for the AVCaptureVideoDataOutput re-export
    "AVCaptureVideoDataOutput",
    "AVCaptureSessionPreset",
    "AVMediaFormat",    # AVMediaTypeVideo constant
] }
objc2-core-video = { version = "0.3", optional = true, default-features = false, features = [
    "std",
    "CVBase",
    "CVBuffer",
    "CVImageBuffer",
    "CVPixelBuffer",
    "CVReturn",
] }
objc2-core-media = { version = "0.3", optional = true, default-features = false, features = [
    "std",
    "objc2",            # CMTime Encode (passed through msg_send)
    "objc2-core-video", # CMSampleBuffer::image_buffer
    "CMBase",
    "CMSampleBuffer",
    "CMFormatDescription", # CMVideoFormatDescriptionGetDimensions
    "CMTime",
] }
dispatch2 = { version = "0.3", optional = true, default-features = false, features = [
    "std",
] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows GPU inference: the ort DirectML execution provider (vendor-neutral DX12,
# covering AMD Radeon 780M and Intel Arc/Iris Xe iGPUs). Windows-only feature, so
# it never reaches macOS/Linux `--all-features` builds. Unions with the base `ort`
# dep declared under the non-wasm target table. See inference_ort.rs.
ort = { workspace = true, optional = true, features = ["directml"] }
# WDDM adapter temperature (D3DKMT) for the Windows thermal sensor. Reuses the
# `windows` crate already resolved transitively in the graph (0.62); only these two
# feature modules are new. Optional + gated by `thermal-sensor-windows`.
windows = { version = "0.62", optional = true, features = [
    "Wdk_Graphics_Direct3D", # D3DKMTEnumAdapters2 / D3DKMTQueryAdapterInfo + structs
    "Win32_Foundation",      # NTSTATUS, LUID, BOOL referenced by those structs
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true
serde_json.workspace = true

[[example]]
name = "leap_pause_probe"
required-features = ["hand-tracking-gestures"]

[[example]]
name = "leap_duty_stress"
required-features = ["hand-tracking-gestures"]

[[example]]
name = "leap_recovery_probe"
required-features = ["hand-tracking-gestures"]

[[example]]
name = "leap_heartbeat_monitor"
required-features = ["hand-tracking-gestures"]

[dev-dependencies]
tempfile.workspace = true
