[package]
name = "wc-sketches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WaveConductor sketch plugins: line, flame, dots, cymatics, waves."
publish = false

[lints]
workspace = true

[features]
default = []
hand-tracking-gestures = ["wc-core/hand-tracking-gestures"]
# Per-image template adjustments (Line): the registered adjustments map, the
# custom dock-section UI, the re-seed/colour-influence drivers, and orphan
# pruning. Native-only (pulls wc-core/templates, which uses rfd/image/blake3);
# the binary enables it, CI exercises it under --all-features.
templates = ["wc-core/templates"]

[dependencies]
bevy.workspace = true
wc-core.workspace = true
wc-core-macros.workspace = true
bytemuck.workspace = true
serde.workspace = true
tracing.workspace = true
leafwing-input-manager.workspace = true
# Line heatmap-image spawn (Plan 10 Phase A): PNG decode + CDF inversion.
image.workspace = true
rand.workspace = true

[dev-dependencies]
smallvec.workspace = true
toml = { workspace = true }
tempfile.workspace = true
