[package]
name = "wc-sketches"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WaveConductor sketch plugins: line, dots, cymatics."
publish = false

[lints]
workspace = true

[features]
default = []
hand-tracking-gestures = ["wc-core/hand-tracking-gestures"]
# Per-image template adjustments (Line): the registered adjustments map, the
# custom dock-section UI, the re-seed/colour-influence drivers, and orphan
# pruning. Native-only (pulls wc-core/templates, which uses rfd/image/blake3).
# `egui-phosphor` is for the custom dock-section renderer's reset-to-default
# glyph. `bevy_egui` moved to an unconditional dependency below (Task F12,
# Flame's name-input overlay), so it is no longer feature-gated here.
templates = ["wc-core/templates", "dep:egui-phosphor"]

[dependencies]
bevy.workspace = true
wc-core.workspace = true
wc-core-macros.workspace = true
bytemuck.workspace = true
serde.workspace = true
tracing.workspace = true
# Line heatmap-image spawn (Plan 10 Phase A): PNG decode + CDF inversion.
image.workspace = true
rand.workspace = true
# Flame's name-input overlay (Task F12) draws unconditionally, so bevy_egui
# is a required dependency (already in the workspace graph via wc-core).
bevy_egui.workspace = true
# Only for the `templates` feature's custom dock-section renderer (the
# phosphor reset-to-default glyph, matching the main settings panel).
egui-phosphor = { workspace = true, optional = true }

[dev-dependencies]
smallvec.workspace = true
toml = { workspace = true }
tempfile.workspace = true
